--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -12,10 +12,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="screen-orientation" content="portrait">
     <meta name="x5-orientation" content="portrait">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
     <title>官网-华劳集团股份有限公司</title>
-    <meta name="keywords" content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
-    <meta name="description" content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
+    <meta name="keywords"
+        content="华劳集团股份有限公司,政务招聘服务,政务编外派遣服务,政务外包服务,人才招聘服务,劳务派遣服务,岗位/产线外包服务,灵活用工服务,建筑工程劳务分包,机电安装劳务分包,雇工伞,高管福利,员工关怀计划,建工宝,客房清洁HCO,公共区域保洁,PA 保洁,保洁岗位外包">
+    <meta name="description"
+        content="华劳集团股份有限公司创始于2007年，是中国人力资源服务行业的先行者，旗下运营主体有华劳人力资源、金伞保险代理、中政服务外包、中劳建筑劳务分包、中洁清洁、中朗安服六大事业集群，是一家致力于人力资源全产业链管理与开发的综合性商业服务集团。">
     <meta http-equiv="Cache-Control" content="no-transform">
     <meta http-equiv="Cache-Control" content="no-siteapp">
     <meta http-equiv="Pragma" content="no-cache">
@@ -39,7 +42,8 @@
     <script src="__TMPL__/public/assets/style/js/jquery.min.js"></script>
     <script src="__TMPL__/public/assets/style/js/slick.min.js"></script>
     <script src="__TMPL__/public/assets/style/font/iconfont.js"></script>
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.4&key=390f8d3e5942f5160a994c1916cae4b1"></script>
+    <script type="text/javascript"
+        src="https://webapi.amap.com/maps?v=1.4.4&key=390f8d3e5942f5160a994c1916cae4b1"></script>
 
 </head>
 
@@ -58,110 +62,123 @@
                         </li>
                         <li data-url="product">
                             <p><a href="javascript:void(0)" title="产品服务">产品服务</a></p>
-							<div class="menu-dropdown" id="menu-dropdown-1">
-								<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
-									<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
-										<div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"  style="height:100%">
-											<ul class="nav-item-title">
-												<li class="title-active">华劳人力</li>
-												<li>中政外包</li>
-												<li>中洁清洁</li>
-												<li>金伞保险</li>
-												<li>中劳劳务</li>
-												<li>中朗安服</li>
-												<li>和谐调解</li>
-												<li>刷活招聘平台</li>
-											</ul>
-											<ul class="nav-item-text" style="height:100%;border-left: solid 1px #e6e6e6;">
-												<li class="nav-item-text-list text-active">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="劳务派遣">劳务派遣</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="岗位外包">岗位外包</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="业务外包">业务外包</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="产线外包">产线外包</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>5))}" title="招聘流程外包（RPO）">招聘流程外包（RPO）</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>6))}" title="灵活用工">灵活用工</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="政务编外派遣服务">政务编外派遣服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="政务外包服务">政务外包服务</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="国企和上市物业公司清洁外包">国企和上市物业公司清洁外包</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="公建/写字楼清洁外包">公建/写字楼清洁外包</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="酒店清洁服务">酒店清洁服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="工业园区清洁服务">工业园区清洁服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>5))}" title="城市环境清洁服务">城市环境清洁服务</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="雇主责任险">雇主责任险</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="工伤补充险">工伤补充险</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="雇工伞">雇工伞</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="建工宝">建工宝</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="建筑工程劳务分包">建筑工程劳务分包</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="机电安装劳务分包">机电安装劳务分包</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="保安服务">保安服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="安检服务">安检服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>3))}" title="保镖服务">保镖服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="临勤服务">临勤服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>4))}" title="智慧安防">智慧安防</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>1))}" title="劳资调解服务">劳资调解服务</a></li>
-														<li><a href="{:cmf_url('portal/Product/index',array('id'=>2))}" title="法务咨询服务">法务咨询服务</a></li>
-													</ul>
-												</li>
-												<li class="nav-item-text-list">
-													<ul class="nav-item-text-item flex">
-														<li><a href="{:cmf_url('portal/Service/index',array('id'=>1))}" title="我要找活">我要找活</a></li>
-														<li><a href="{:cmf_url('portal/Service/index',array('id'=>2))}" title="我要招人">我要招人</a></li>
-														<li><a href="{:cmf_url('portal/Service/index',array('id'=>2))}" title="刷活APP下载">刷活APP下载</a></li>
-													</ul>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
+                            <div class="menu-dropdown" id="menu-dropdown-1">
+                                <div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
+                                    <div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper"
+                                        style="border:none;height:100%">
+                                        <div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"
+                                            style="height:100%">
+                                            <ul class="nav-item-title">
+                                                <li class="title-active">华劳人力</li>
+                                                <li>中政外包</li>
+                                                <li>中洁清洁</li>
+                                                <li>金伞保险</li>
+                                                <li>中劳劳务</li>
+                                                <li>中朗安服</li>
+                                                <li>和谐调解</li>
+                                                <li>刷活招聘平台</li>
+                                            </ul>
+                                            <ul class="nav-item-text"
+                                                style="height:100%;border-left: solid 1px #e6e6e6;">
+                                                <li class="nav-item-text-list text-active">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="31" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="38" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="41" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="47" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="52" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="55" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="61" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                    </ul>
+                                                </li>
+                                                <li class="nav-item-text-list">
+                                                    <ul class="nav-item-text-item flex">
+                                                        <portal:subCategories categoryId="64" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
                         <li data-url="solution">
                             <p><a href="javascript:void(0)" title="解决方案">解决方案</a></p>
-							<div class="menu-dropdown" id="menu-dropdown-1">
-								<div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
-									<div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper" style="border:none;height:100%">
-										<div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"  style="height:100%">
-											<!-- <ul class="nav-item-title">
+                            <div class="menu-dropdown" id="menu-dropdown-1">
+                                <div id="menu-dropdown-wrapper" class="menu-dropdown-wrapper">
+                                    <div id="menu-dropdown-content-wrapper" class="menu-dropdown-content-wrapper"
+                                        style="border:none;height:100%">
+                                        <div class="menu-dropdown-content-2 flex-box" id="menu-dropdown-content"
+                                            style="height:100%">
+                                            <!-- <ul class="nav-item-title">
 												<li class="title-active">解决方案</li>
 											</ul> -->
-											<ul class="nav-item-text" style="height:100%;">
-												<li class="nav-item-text-list text-active">
-													<ul class="nav-item-text-item flex-box">
-														<li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}" title="企业规模用工解决方案">企业规模用工解决方案</a></li>
-														<li><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}" title="企业用工风险解决方案">企业用工风险解决方案</a></li>
-														<li><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}" title="全国人事社保解决方案">全国人事社保解决方案</a></li>
-													</ul>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</div>
+                                            <ul class="nav-item-text" style="height:100%;">
+                                                <li class="nav-item-text-list text-active">
+                                                    <ul class="nav-item-text-item flex-box">
+                                                        <li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}"
+                                                                title="企业规模用工解决方案">企业规模用工解决方案</a></li>
+                                                        <li><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}"
+                                                                title="企业用工风险解决方案">企业用工风险解决方案</a></li>
+                                                        <li><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}"
+                                                                title="全国人事社保解决方案">全国人事社保解决方案</a></li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </li>
                         <li data-url="news">
                             <p><a href="{:cmf_url('portal/News/index')}" title="新闻中心">新闻咨询</a></p>
@@ -248,7 +265,8 @@
                     <a href="{:cmf_url('portal/Application/index')}" class="menu-splitL-item" title="企业应用">企业应用</a>
                 </li>
                 <li class="menu-splitL-li border-1px-rgba animate">
-                    <a href="{:cmf_url('portal/Form/index')}" class="menu-splitL-item" title="预约方案" target="_blank">预约方案</a>
+                    <a href="{:cmf_url('portal/Form/index')}" class="menu-splitL-item" title="预约方案"
+                        target="_blank">预约方案</a>
                 </li>
             </ul>
         </div>
@@ -276,7 +294,7 @@
         $('.header-box').mouseout(function () {
             activeNav();
         });
-        function activeNav() {
+        function activeNav () {
             $('.header-box li').removeClass('active');
             var location = window.location.pathname;
             var arr = location.split("/");
