样式 替换图片

--- a/public/themes/simpleboot3/portal/application.html
+++ b/public/themes/simpleboot3/portal/application.html
@@ -59,12 +59,12 @@
                             </div>
                             <div class="right">
                                 <div class="item">
-                                    <img src="__TMPL__/public/assets/style/imgs/application/劳务派遣.png" />
+                                    <img src="__TMPL__/public/assets/style/imgs/application/laowu.png" />
                                     <div>劳务派遣H5</div>
                                     <a href="https://admin.dezhouhr.com/login" target="_blank">劳务派遣管理系统</a>
                                 </div>
                                 <div class="item">
-                                    <img src="__TMPL__/public/assets/style/imgs/application/德劳网.png" />
+                                    <img src="__TMPL__/public/assets/style/imgs/application/delaowang.png" />
                                     <div>德劳网H5</div>
                                     <a href="https://74cms.hualaogroup.com/" target="_blank">德劳网PC端</a>
                                 </div>
@@ -76,7 +76,7 @@
                     <div class="box-2 crm">
                         <div class="flex-box">
                             <div class="left">
-                                <img src="__TMPL__/public/assets/style/imgs/application/和谐.png" />
+                                <img src="__TMPL__/public/assets/style/imgs/application/hexie_bg.png" />
                                 <div>和谐关系</div>
                             </div>
                             <div class="right">
