--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -76,7 +76,7 @@
                                                 <li>中劳劳务</li>
                                                 <li>中朗安服</li>
                                                 <li>和谐调解</li>
-                                                <li>刷活招聘平台</li>
+                                               <!-- <li>刷活招聘平台</li> -->
                                             </ul>
                                             <ul class="nav-item-text"
                                                 style="height:100%;border-left: solid 1px #e6e6e6;">
@@ -138,14 +138,14 @@
                                                         </portal:subCategories>
                                                     </ul>
                                                 </li>
-                                                <li class="nav-item-text-list">
+                                                <!-- <li class="nav-item-text-list">
                                                     <ul class="nav-item-text-item flex">
                                                         <portal:subCategories categoryId="64" item="vo">
                                                             <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
                                                                     title="{$vo.name}">{$vo.name}</a></li>
                                                         </portal:subCategories>
                                                     </ul>
-                                                </li>
+                                                </li> -->
                                             </ul>
                                         </div>
                                     </div>
