--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -76,7 +76,7 @@
                                                 <li>中劳劳务</li>
                                                 <li>中朗安服</li>
                                                 <li>和谐调解</li>
-                                               <!-- <li>刷活招聘平台</li> -->
+                                                <!-- <li>刷活招聘平台</li> -->
                                             </ul>
                                             <ul class="nav-item-text"
                                                 style="height:100%;border-left: solid 1px #e6e6e6;">
@@ -166,12 +166,16 @@
                                             <ul class="nav-item-text" style="height:100%;">
                                                 <li class="nav-item-text-list text-active">
                                                     <ul class="nav-item-text-item flex-box">
-                                                        <li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}"
+                                                        <portal:subCategories categoryId="68" item="vo">
+                                                            <li><a href="{:cmf_url('portal/List/index',array('id'=>$vo.id))}"
+                                                                    title="{$vo.name}">{$vo.name}</a></li>
+                                                        </portal:subCategories>
+                                                        <!-- <li><a href="{:cmf_url('portal/Solution/index',array('id'=>1))}"
                                                                 title="企业规模用工解决方案">企业规模用工解决方案</a></li>
                                                         <li><a href="{:cmf_url('portal/Solution/index',array('id'=>2))}"
                                                                 title="企业用工风险解决方案">企业用工风险解决方案</a></li>
                                                         <li><a href="{:cmf_url('portal/Solution/index',array('id'=>3))}"
-                                                                title="全国人事社保解决方案">全国人事社保解决方案</a></li>
+                                                                title="全国人事社保解决方案">全国人事社保解决方案</a></li> -->
                                                     </ul>
                                                 </li>
                                             </ul>
