--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -55,16 +55,18 @@
                             <div class="text">持续不断为客户提供具有价值的产品和服务</div>
                         </div>
                     </div>
-                    <div class="index-product-item">
-                        <div class="index-product-item-innerbox2">
-                            <div class="flex-box">
-                                <div class="img"></div>
-                                <div class="title">劳务派遣</div>
-                            </div>
-                            <div class="text">机关事业单位劳务派遣、国有企业劳务派遣</div>
-                        </div>
-                    </div>
-                    <div class="index-product-item">
+					<volist name="productList" id="vo">
+						<div class="index-product-item">
+							<div class="index-product-item-innerbox2">
+								<div class="flex-box">
+									<div class="img"></div>
+									<div class="title">劳务派遣</div>
+								</div>
+								<div class="text">机关事业单位劳务派遣、国有企业劳务派遣</div>
+							</div>
+						</div>
+					</volist>
+                    <!-- <div class="index-product-item">
                         <div class="index-product-item-innerbox2">
                             <div class="flex-box">
                                 <div class="img"></div>
@@ -126,7 +128,7 @@
                             </div>
                             <div class="text">帮助解决企业工伤风险，让企业更专注于研发和生产</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
